verseghy-website/static/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
        - name: app
          image: verseghy/website_static
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: cache
              mountPath: /var/cache/
      volumes:
        - name: cache
          emptyDir: {}
