verseghy-website/static/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-svc
spec:
  selector:
    app: static
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
